WindGroup Dev/src/objects/Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>Attention_To__c</fullName>
        <label>Attention To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_Amount__c</fullName>
        <label>Balance Amount</label>
        <summarizedField>PO_Line_Item__c.Balance_Amount__c</summarizedField>
        <summaryForeignKey>PO_Line_Item__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Balance_Quantity__c</fullName>
        <label>Balance Quantity</label>
        <summarizedField>PO_Line_Item__c.Balance_Quantity__c</summarizedField>
        <summaryForeignKey>PO_Line_Item__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_City__c</fullName>
        <label>Delivery City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Country__c</fullName>
        <label>Delivery Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Phone__c</fullName>
        <label>Delivery Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Street__c</fullName>
        <label>Delivery Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Zip_Postal_Code__c</fullName>
        <label>Delivery Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generate_PO_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate PO PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Min_Quote_Amount__c</fullName>
        <label>Min Quote Amount</label>
        <summarizedField>Quote__c.Grand_Total__c</summarizedField>
        <summaryForeignKey>Quote__c.PO_No__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PO_Amount__c</fullName>
        <inlineHelpText>Roll-up from Line Items</inlineHelpText>
        <label>PO Amount</label>
        <summarizedField>PO_Line_Item__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>PO_Line_Item__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PO_End_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Frequency__c</fullName>
        <label>PO Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half-Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Line_Items__c</fullName>
        <label>PO Line Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO_Line_Validation_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to bypass PO Line Item validation rule</description>
        <label>PO Line Validation Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Start_Date__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Amount__c</fullName>
        <label>Received Amount</label>
        <summarizedField>PO_Line_Item__c.Received_Amount__c</summarizedField>
        <summaryForeignKey>PO_Line_Item__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <inlineHelpText>Roll-up from PO Line Items</inlineHelpText>
        <label>Received Quantity</label>
        <summarizedField>PO_Line_Item__c.Received_Quantity__c</summarizedField>
        <summaryForeignKey>PO_Line_Item__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In-Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancel In-Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <formula>IF ( Tax_Applicable__c,
 
PO_Amount__c *  Tax_Rate__c  , 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PO Amount * Tax Rate</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_PO_Amount__c</fullName>
        <formula>Tax_Amount__c +  PO_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PO Amount + Tax Amount</inlineHelpText>
        <label>Total PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <inlineHelpText>Roll-up from related Line Items: Quantity</inlineHelpText>
        <label>Total Quantity</label>
        <summarizedField>PO_Line_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>PO_Line_Item__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Receipt_Amount_With_Tax__c</fullName>
        <inlineHelpText>Roll-up from related Invoice Receipt(s): Total Amount</inlineHelpText>
        <label>Total Receipt Amount (With Tax)</label>
        <summarizedField>Invoice_Receipt__c.Total_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Receipt__c.Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Receipt__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Receipt_Amount__c</fullName>
        <inlineHelpText>Roll-up of Amount from related Invoice Receipt</inlineHelpText>
        <label>Total Receipt Amount (W/O Tax)</label>
        <summarizedField>Invoice_Receipt__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Receipt__c.Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Receipt__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>DY</fullName>
                </value>
                <value>
                    <fullName>WK</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Vendor_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Whitelisted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders (Vendor Name)</relationshipLabel>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3_Quotes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this and attach 3 Quotes</inlineHelpText>
        <label>3 Quotes</label>
        <type>Checkbox</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PO_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PO No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <recordTypes>
        <fullName>One_Time</fullName>
        <active>true</active>
        <description>Create standard purchase orders for one-time purchase of various items</description>
        <label>One Time</label>
    </recordTypes>
    <recordTypes>
        <fullName>Services</fullName>
        <active>true</active>
        <description>A recurring purchase order to buy services from a single source</description>
        <label>Recurring Svc</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Whitelist_vendor_is_not_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>Vendor_Name__r.Whitelisted__c == TRUE</errorConditionFormula>
        <errorDisplayField>Vendor_Name__c</errorDisplayField>
        <errorMessage>Whitelisted vendor is not allowed!</errorMessage>
    </validationRules>
</CustomObject>